crashpad win: Ensure database dir exists on first run

Crashpad will only create one level of directory for its database
storage. On Windows, the target is %LOCALAPPDATA%\Google\Chrome\User
Data\Crashpad.

However, on first run when Crashpad is initialized, "User Data" will not
yet have been created. We don't want to move Crashpad initialization
later in startup, so we instead create the directory if it does not
exist.

Note that this is calling file_util::CreateDirectory(), rather than
CreateDirectoryW() which means the full parent tree will be created, not
just the last entry in the path.

R=thakis@chromium.org,wfh@chromium.org
TEST=remove local user data dir, install chrome, confirm that chrome --process-type=crashpad-handler exists on first run
BUG=591504

Review URL: https://codereview.chromium.org/1774573002

Cr-Commit-Position: refs/heads/master@{#379676}

Former-commit-id: 92905ef36a30be9be9041d8ee07ccd6e7ca45d64